Remove body margin when lightbox opens to prevent background bleed.

--- a/themes/kurtpaullevy-understrap-child/css/child-theme.css
+++ b/themes/kurtpaullevy-understrap-child/css/child-theme.css
@@ -21984,6 +21984,11 @@ body:is(.blog) .category-dropdown {
   transition: opacity 0.5s ease, visibility 0s 0s;
 }
 
+body.lightbox-open {
+  margin-top: 0 !important;
+  overflow: hidden !important;
+}
+
 .gallery-lightbox__controls {
   position: absolute;
   left: calc(3vw + 10px);
